--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d8d0123
-	base = 9034dcf
-	trim = 
-	trimbase = 
+	base = f3962bd
+	trim = automotive_platform_msgs
+	trimbase = 9034dcf
