--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d8d0123
-	base = dbc7b69
-	trim = 
-	trimbase = 
+	base = f3067c8
+	trim = automotive_autonomy_msgs
+	trimbase = dbc7b69
