--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_platform_msgs
-	previous = 
-	base = 8e7494c
+	previous = 8e7494c
+	base = 71d3801
 	trim = 
 	trimbase = 
