--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_autonomy_msgs
-	previous = 
-	base = 5012558
+	previous = 5012558
+	base = 5e8d0f9
 	trim = 
 	trimbase = 
