--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_navigation_msgs
-	previous = 
-	base = 15f32d2
+	previous = 15f32d2
+	base = fc51be8
 	trim = 
 	trimbase = 
