--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/automotive_navigation_msgs
-	previous = 
-	base = 95856e1
+	previous = 95856e1
+	base = 53fdbb2
 	trim = 
 	trimbase = 
