--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_autonomy_msgs
-	previous = 
-	base = b070031
+	previous = b070031
+	base = cf77be7
 	trim = 
 	trimbase = 
