--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_platform_msgs
-	previous = 
-	base = 4d5787d
+	previous = 4d5787d
+	base = 916dacf
 	trim = 
 	trimbase = 
