--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/automotive_navigation_msgs
-	previous = 
-	base = f741cd5
+	previous = f741cd5
+	base = 7bcb4c9
 	trim = 
 	trimbase = 
