--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/automotive_platform_msgs
-	previous = 
-	base = f3962bd
+	previous = f3962bd
+	base = 1273f68
 	trim = 
 	trimbase = 
