--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/automotive_platform_msgs
-	previous = 
-	base = a074e71
+	previous = a074e71
+	base = 0fb67fe
 	trim = 
 	trimbase = 
