--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/automotive_autonomy_msgs
-	previous = 
-	base = f3067c8
+	previous = f3067c8
+	base = 4bd7977
 	trim = 
 	trimbase = 
