--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/automotive_autonomy_msgs
-	previous = 
-	base = 9ceff24
+	previous = 9ceff24
+	base = f0d0a45
 	trim = 
 	trimbase = 
