--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/automotive_navigation_msgs
-	previous = 
-	base = 54e5a7f
+	previous = 54e5a7f
+	base = 5bff725
 	trim = 
 	trimbase = 
