--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bcecc4f
-	base = 1e7afc8
+	base = 52b0681
 	trim = automotive_navigation_msgs
-	trimbase = 
+	trimbase = 1e7afc8
