--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bcecc4f
-	base = aa7af0a
+	base = 6278b1b
 	trim = automotive_platform_msgs
-	trimbase = 
+	trimbase = aa7af0a
