--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bcecc4f
-	base = 1f61f85
+	base = fcb9243
 	trim = automotive_autonomy_msgs
-	trimbase = 
+	trimbase = 1f61f85
