--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.4-2": ["Tue Feb 08 2022", "AutonomouStuff Software Development Team", "software@autonomoustuff.com"]}
+{"3.0.4-3": ["Tue Apr 19 2022", "AutonomouStuff Software Development Team", "software@autonomoustuff.com"], "3.0.4-2": ["Tue Feb 08 2022", "AutonomouStuff Software Development Team", "software@autonomoustuff.com"]}
